# project-mentor-ai

./: README.md  docker-compose.yaml
.cursor/docs/: TZ.md  analitika_rag_assistent_gost.md  openapi.yaml  user_story_rag_assistent_site.md
.cursor/docs/architecture/: api.md  backend.md  database.md  docker.md  frontend.md  frontend_pages.md  overview.md  qdrant.md  rag_pipeline.md  redis.md
.cursor/rules/: backend-python.mdc  frontend-vue.mdc  project-context.mdc  rag-pipeline.mdc
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: __init__.py  __main__.py
backend/app/auth/: accessor.py  exceptions.py  manager.py  views.py
backend/app/auth/domain/: models.py  schemas.py
backend/app/base/: __init__.py  accessor.py  decorators.py  http_accessor.py  manager.py  view.py
backend/app/chat/: accessor.py  db.py  exceptions.py  manager.py  views.py
backend/app/chat/domain/: models.py  schemas.py
backend/app/common/: config.py  sse.py
backend/app/documents/: db.py
backend/app/entrypoints/: __init__.py  seed_knowledge_base.py
backend/app/entrypoints/api/: __init__.py  app.py  daemon.py  health.py
backend/app/global_/: __init__.py  autodiscover.py  log.py  settings.py
backend/app/rag/: chunker.py  config.py  manager.py
backend/app/rag/accessors/: __init__.py  embedder.py  llm.py  retriever.py
backend/app/store/: store.py
backend/app/store/cache/: __init__.py  config.py
backend/app/store/pg/: __init__.py  accessor.py  config.py  models.py
backend/app/store/pg/migrations/: env.py
backend/app/store/pg/migrations/versions/: 323d28a94331_create_documents_table.py  8a4be1b55a1d_create_users_table.py  e729e9ee7eaa_create_chats_and_messages_tables.py
backend/app/users/: accessor.py  db.py  exceptions.py  manager.py  views.py
backend/app/users/domain/: enums.py  models.py  schemas.py
backend/app/web/: errors.py  middlewares.py  plugin.py  request.py
backend/etc/: config.example.yaml
backend/tests/: config.yaml  conftest.py  constants.py
backend/tests/integration/: conftest.py
backend/tests/integration/auth/: conftest.py  test_login.py  test_register.py
backend/tests/integration/chats/: conftest.py  test_chat_crud.py  test_messages.py
backend/tests/unit/: conftest.py
backend/tests/unit/auth/: conftest.py  test_auth_manager.py
backend/tests/unit/chats/: test_chat_manager.py
backend/tests/unit/rag/: conftest.py  test_rag_manager.py  test_sse.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: admin.js  auth.js  chat.js  client.js
frontend/src/components/: ChatInput.vue  ChatSidebar.vue  ChatWindow.vue  (+3 more)
(+77 files in other folders)
